PR review: fixing media query, font mixins, updating sidenav spacing, adding image spacing on pricing

--- a/_assets/css/index.scss
+++ b/_assets/css/index.scss
@@ -204,7 +204,7 @@ a.cg-arrow {
     font-family: 'Times New Roman', Arial, sans-serif;
   }
 }
-@media screen and (min-width: 640px) {
+@include at-media('tablet') {
   .bar-top {
     @include u-padding-top(4);
     &:before {
