--- a/_assets/css/theme/_uswds-theme-custom-styles.scss
+++ b/_assets/css/theme/_uswds-theme-custom-styles.scss
@@ -486,7 +486,7 @@ main .usa-button--secondary {
 }
 
 .usa-sidenav .usa-current {
-  font-weight: 500;
+  @include u-text('medium');
 }
 
 .usa-sidenav a:hover {
@@ -499,7 +499,7 @@ main .usa-button--secondary {
 }
 
 .usa-sidenav__sublist a {
-  @include u-padding-left(5);
+  padding-left: 2.75rem;
 }
 
 .usa-sidenav__sublist .usa-sidenav__sublist a {
